fix spacing on about page and score storage

--- a/src/about/about.css
+++ b/src/about/about.css
@@ -1,3 +1,8 @@
+main {
+    margin: 0;
+    padding: 0;
+    justify-content: center !important;
+}
 .picture-box {
     height: calc(100px + 1em);
     margin-bottom: 1em;
